--- a/views/user-wishlist.ejs
+++ b/views/user-wishlist.ejs
@@ -639,7 +639,7 @@
                                 <img alt="Evara" src="/userassets/imgs/theme/icons/icon-cart.svg">
                                 <span class="pro-count white"><%= cartItemCount %></span>
                             </a>
-                            <div class="cart-dropdown-wrap cart-dropdown-hm2">
+                            <!-- <div class="cart-dropdown-wrap cart-dropdown-hm2">
                                 <ul>
                                     <li>
                                         <div class="shopping-cart-img">
@@ -677,7 +677,7 @@
                                         <a href="shop-checkout.html">Checkout</a>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="header-action-icon-2 d-block d-lg-none">
                             <div class="burger-icon burger-icon-white">
