--- a/views/user-shop.ejs
+++ b/views/user-shop.ejs
@@ -751,7 +751,7 @@
                                         <a aria-label="Add To Wishlist" data-product-id="<%= item._id  %>"
                                             class="action-btn hover-up wishlist-button<%= productInWishlist ? ' added' : '' %>"
                                             href="#" onclick="handleWishlistClick(this)"><i class="fas fa-heart"
-                                                style="color: <%= productInWishlist ? 'red' : 'grey' %>;"></i>
+                                                style="color: <%= productInWishlist ? 'red' : 'grey' %>"></i>
                                         </a>
                                         
                                         <!-- <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i
@@ -1008,6 +1008,7 @@
 
         async function addtoCart(productId, stock) {
             try {
+                alert("addToCart")
                 let response = await fetch('/addtocart', {
                     method: 'POST',
                     headers: {
@@ -1201,8 +1202,6 @@
 
             event.preventDefault();
             const productId =  button.dataset.productId;
-            alert("wishlist productID")
-            alert(productId)
             console.log(productId, "wishlist productID")
 
             fetch(`/wishlist/${productId}`, {
